--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -129,3 +129,24 @@
     }
   }
 }
+
+.popup__content--projects {
+  padding: 48px 40px;
+  max-width: 852px;
+
+  .proposal__projects {
+    h2:first-of-type {
+      font-size: 24px;
+      line-height: 28.44px;
+    }
+
+    h2:last-of-type {
+      font-size: 18px;
+      line-height: 23.4px;
+    }
+  }
+
+  .popup__close-btn {
+    margin-left: auto;
+  }
+}
