Чинит аккордеоны, на страницах и попапах, исправляет чекбоксы, скрывает синюю кнопку и показывает полпись вы проголосовали, активирует попап на странице improvement-list-var2, подправляет адаптив для таблеты и  мобилы, адаптив попапа

--- a/source/sass/blocks/form-checkbox.scss
+++ b/source/sass/blocks/form-checkbox.scss
@@ -51,7 +51,7 @@
     display: block;
     top: 6px;
     left: 6px;
-    background-image: url("../img/checkbox-grey.svg");
+    background-image: url("../img/tick-grey.svg");
   }
 }
 
