Исправляет баги по баг-листу

--- a/source/sass/blocks/proposal-list.scss
+++ b/source/sass/blocks/proposal-list.scss
@@ -111,7 +111,8 @@
 }
 
 .proposal-list__project-mark {
-  font-size: rem(14px);
+  //font-size: rem(14px);
+  font-size: 14px;
   @media (min-width: $tablet-width) {
     margin-right: 16px;
   }
