Исправляет часть новых багов

--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -39,6 +39,7 @@
   &::before {
     border: 6px solid var(--color-interactive-default, $blue-default);
   }
+  pointer-events: none;
 }
 
 .form-radio input[type="radio"]:disabled ~ label {
