--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -134,12 +134,15 @@
   padding: 48px 40px;
   max-width: 852px;
   border-radius: 5px;
+  padding-bottom: 0;
 
   @media (max-width: $tablet-width) {
     padding: 24px;
   }
   @media (max-width: $mobile-max-width) {
     padding: 16px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .proposal__projects {
@@ -179,6 +182,7 @@
   }
 
   .proposal__projects {
+    margin-bottom: 0;
     @media (max-width: $mobile-max-width) {
       margin-left: 0;
       margin-right: 0;
@@ -193,6 +197,34 @@
 
   .button-details {
     bottom: 35px;
+  }
+
+  .proposal__project:last-child {
+    margin-bottom: 0;
+  }
+
+  .swiper-slide {
+    width: 135px;
+    height: 135px;
+  }
+
+  .proposal__gallery {
+    max-width: 775px;
+    margin: 0;
+
+    @media (max-width: $desktop-width - 1) {
+      max-width: unset;
+    }
+    @media (max-width: $mobile-max-width) {
+      max-width: unset;
+      width: 100%;
+    }
+
+    button {
+      @media (max-width: $mobile-max-width) {
+        width: unset;
+      }
+    }
   }
 }
 
