--- a/source/sass/functions.scss
+++ b/source/sass/functions.scss
@@ -3,3 +3,7 @@ $base-font-size: 16px;
 @function rem($size) {
   @return $size / $base-font-size * 1rem;
 }
+
+@function lineheight($size) {
+  @return $size / $base-font-size * 1rem;
+}
