--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -790,7 +790,7 @@
 }
 
 .proposal__project .swiper-slide {
-  margin-right: 15px;
+  // margin-right: 15px;
   width: 129px;
   height: 129px;
 }
@@ -828,14 +828,14 @@
       height: 135px;
     }
   }
-  .gallery__tape .swiper-slide:first-child {
-    @media (max-width: $tablet-width) {
-      padding-left: 0;
-    }
-    @media (max-width: $mobile-max-width) {
-      padding-left: 0;
-    }
-  }
+  // .gallery__tape .swiper-slide:first-child {
+  //   @media (max-width: $tablet-width) {
+  //     padding-left: 0;
+  //   }
+  //   @media (max-width: $mobile-max-width) {
+  //     padding-left: 0;
+  //   }
+  // }
 }
 
 .proposal__milestones-item {
